--- a/package.json
+++ b/package.json
@@ -10,19 +10,27 @@
         "@inertiajs/vue3": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/vite": "^4.0.0",
-        "@vitejs/plugin-vue": "^5.0.0",
+        "@vitejs/plugin-vue": "^6.0.1",
         "autoprefixer": "^10.4.12",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
-        "vite": "^7.0.4",
+        "vite": "^7.0.6",
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.23",
+        "@heroicons/vue": "^2.2.0",
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
+        "@tailwindcss/postcss": "^4.1.11",
+        "highcharts": "^12.3.0",
+        "highcharts-vue": "^2.0.1",
+        "jsvectormap": "^1.7.0",
+        "mitt": "^3.0.1",
+        "pinia": "^3.0.3",
         "vue": "^3.5.18"
     }
 }
