--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@tailwindcss/postcss": "^4.1.11",
+        "dropzone": "^6.0.0-beta.2",
         "highcharts": "^12.3.0",
         "highcharts-vue": "^2.0.1",
         "jsvectormap": "^1.7.0",
         "mitt": "^3.0.1",
         "pinia": "^3.0.3",
-        "vue": "^3.5.18"
+        "vue": "^3.5.18",
+        "vue-flatpickr-component": "^12.0.0"
     }
 }
